--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.4.7",
     "eslint": "^8.39.0",
     "eslint-config-next": "14.2.31",
     "postcss": "^8.5.3",
